Pontoon: Update Slovenian (sl) localization of Firefox Co-authored-by: Rok Žerdin <zerdo90@gmail.com>

--- a/sl/devtools/client/debugger.properties
+++ b/sl/devtools/client/debugger.properties
@@ -695,6 +695,7 @@ settings.disableJavaScript.label=Onemogoči JavaScript
 
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Onemogoči JavaScript (zahteva osvežitev)
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
@@ -753,6 +754,7 @@ watchpoints.setWatchpoint=Nastavitev lastnosti
 
 # LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Pridobivanje ali nastavitev lastnosti
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
