--- a/sl/devtools/client/netmonitor.properties
+++ b/sl/devtools/client/netmonitor.properties
@@ -766,6 +766,7 @@ netmonitor.ws.context.received.accesskey=r
 
 # LOCALIZATION NOTE (netmonitor.ws.context.controlFrames): This is the label displayed
 # on the context menu that shows "Control Frames" WebSocket frames.
+netmonitor.ws.context.controlFrames=Kontrolnik
 
 # LOCALIZATION NOTE (netmonitor.ws.context.controlFrames.accesskey): This is the access key
 # for the "Control Frames" menu item displayed in the context menu in the websocket toolbar.
@@ -1059,6 +1060,10 @@ netmonitor.toolbar.timings=Časi
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Glave odziva
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=URL zahteve:
@@ -1108,6 +1113,11 @@ netmonitor.summary.rawHeaders.responseHeaders=Glave odziva:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Velikost glav:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Neobdelano
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1553,9 +1563,12 @@ netmonitor.settings.menuTooltip=Nastavitve omrežja
 
 # LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
 # when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=Uvozi datoteko HAR omrežnih podatkov
 
 # LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
 # when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=Shrani omrežne podatke v datoteko HAR
 
 # LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
 # when the HAR copy menu item is hovered
+netmonitor.settings.copyHarTooltip=Kopiraj omrežne podatke v odložišče
