--- a/sl/devtools/client/webconsole.properties
+++ b/sl/devtools/client/webconsole.properties
@@ -225,6 +225,11 @@ webconsole.menu.selectAll.accesskey=z
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Odpri v stranski vrstici
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Preglej predmet v stranski vrstici
 webconsole.menu.openInSidebar.accesskey=r
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
@@ -583,5 +588,6 @@ webconsole.input.openJavaScriptFileFilter=Datoteke JavaScript
 # expression for.
 
 # LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultEnabled): do not translate 'sameSite'.
+webconsole.group.cookieSameSiteLaxByDefaultEnabled=Nekateri piškotki zlorabljajo priporočeni atribut “sameSite“, zato ne bo deloval pravilno
 # LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultDisabled): do not translate 'sameSite'.
 webconsole.group.cookieSameSiteLaxByDefaultDisabled=Nekateri piškotki zlorabljajo priporočeni atribut “sameSite“
