--- a/sl/dom/chrome/security/security.properties
+++ b/sl/dom/chrome/security/security.properties
@@ -148,5 +148,6 @@ FeaturePolicyInvalidAllowValue=Politika možnosti: Prezrta nepodprta vrednost do
 # LOCALIZATION NOTE: %1$S is the URL of the upgraded request; %2$S is the upgraded scheme.
 HTTPSOnlyUpgradeRequest = Nadgrajevanje nevarnega zahtevka “%1$S” v “%2$S”
 # LOCALIZATION NOTE: %1$S is the URL of request.
+HTTPSOnlyNoUpgradeException = Nevarni zahtevek "%1$S" se ni nadgradil, ker je izvzet.
 # LOCALIZATION NOTE: %1$S is the URL of the failed request; %2$S is an error-code.
 HTTPSOnlyFailedRequest = Nadgrajevanje nevarnega zahtevka “%1$S” ni uspelo. (%2$S)
