--- a/sl/dom/chrome/dom/dom.properties
+++ b/sl/dom/chrome/dom/dom.properties
@@ -126,6 +126,7 @@ MediaLoadInvalidURI=Neveljaven URI. Nalaganje vira vsebine %S ni uspelo.
 MediaLoadUnsupportedTypeAttribute=Navedeni atribut "type" za "%1$S" ni podprt. Nalaganje vsebine %2$S ni uspelo.
 # LOCALIZATION NOTE: %1$S is the "media" attribute value of the <source> element. It is a media query. %2$S is the URL of the media resource which failed to load.
 MediaLoadSourceMediaNotMatched=Navedeni atribut "media" za "%1$S" ne ustreza okolju. Nalaganje vsebine %2$S ni uspelo.
+MediaLoadUnsupportedTypeAttributeLoadingNextChild=Navedeni atribut "type" za "%1$S" ni podprt. Nalaganje vsebine %2$S ni uspelo. Poskus nalaganja iz naslednjega elementa <source>.
 # LOCALIZATION NOTE: %1$S is the MIME type HTTP header being sent by the web server, %2$S is the URL of the media resource which failed to load.
 MediaLoadUnsupportedMimeType=HTTP "Content-Type" za "%1$S" ni podprt. Nalaganje vsebine %2$S ni uspelo.
 # LOCALIZATION NOTE: %S is the URL of the media resource which failed to load because of error in decoding.
@@ -337,6 +338,7 @@ GeolocationInsecureRequestIsForbidden=Zahtevo za geolokacijo je mogoče izpolnit
 NotificationsInsecureRequestIsForbidden=Dovoljenje za obvestila je moč zahtevati samo v varnem okolju.
 NotificationsCrossOriginIframeRequestIsForbidden=Dovoljenje za obvestila je moč zahtevati samo v dokumentu najvišje ravni ali v iframe istega izvora.
 NotificationsRequireUserGesture=Dovoljenje za obvestila je moč zahtevati samo znotraj uporabnikovega kratkotrajnega upravljavca dogodkov.
+NotificationsRequireUserGestureDeprecationWarning=Zahtevanje dovoljenja za obvestila zunaj uporabnikovega kratkotrajnega upravljalca dogodkov je zastarelo in v prihodnosti ne bo podprto.
 # LOCALIZATION NOTE: Do not translate "Large-Allocation", as it is a literal header name.
 LargeAllocationNonWin32=Ta stran bi se naložila v novem procesu zaradi glave Large-Allocation, vendar je ustvarjanje procesa Large-Allocation omogočeno samo na platformah Win32.
 # LOCALIZATION NOTE: Do not translate "content", "Window", and "window.top"
@@ -422,3 +424,4 @@ MathML_DeprecatedStyleAttributeWarning=Atributi MathML “background”, “colo
 MathML_DeprecatedXLinkAttributeWarning=Atributi XLink “href”, “type”, “show” in “actuate” so v elementih MathML zastareli in bodo v prihodnosti odstranjeni.
 WebShareAPI_Failed=Deljenje datoteke ni uspelo.
 WebShareAPI_Aborted=Deljenje datoteke je bilo prekinjeno.
+# LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
