[S] devtools: Bug 1631295 - Added a UrlPreview component for the Headers panel

--- a/it/devtools/client/netmonitor.properties
+++ b/it/devtools/client/netmonitor.properties
@@ -257,10 +257,17 @@ netmonitor.headers.toolbar.block = Blocca
 netmonitor.summary.url = URL richiesta:
 netmonitor.summary.method = Metodo di richiesta:
 netmonitor.summary.address = Indirizzo remoto:
+netmonitor.headers.address = Indirizzo
 netmonitor.summary.status = Codice di stato:
+netmonitor.headers.status = Stato
+netmonitor.headers.size = Dimensioni
+netmonitor.headers.sizeDetails = %1$S (dim. %2$S)
 netmonitor.summary.version = Versione:
+netmonitor.headers.version = Versione
 netmonitor.summary.learnMore = Ulteriori informazioni sui codici di stato
 netmonitor.summary.referrerPolicy = Referrer Policy:
+netmonitor.headers.referrer = Referrer
+netmonitor.headers.contentBlocking = Bloccato
 netmonitor.summary.editAndResend = Modifica e reinvia
 netmonitor.summary.rawHeaders = Header non elaborati (raw)
 netmonitor.headers.raw = Non elaborati (raw)
@@ -294,6 +301,7 @@ netmonitor.security.hpkp = “Key Pinning” pubblico:
 netmonitor.security.connection = Connessione:
 netmonitor.security.certificate = Certificato:
 netmonitor.trackingResource.tooltip = Questo URL è stato identificato come elemento tracciante e verrebbe bloccato nel caso in cui il blocco contenuti fosse attivo.
+netmonitor.trackingResource.enhancedTrackingProtection = Protezione antitracciamento avanzata
 netmonitor.context.copy = Copia
 netmonitor.context.copy.accesskey = C
 netmonitor.context.copyUrl = Copia URL
