--- a/de/devtools/client/netmonitor.properties
+++ b/de/devtools/client/netmonitor.properties
@@ -265,13 +265,13 @@ networkMenu.sizeUnavailable=—
 networkMenu.sizeUnavailable.title=Übertragene Größe nicht verfügbar
 
 # LOCALIZATION NOTE (networkMenu.sizeCached): This is the label displayed
-# in the network menu specifying the transfer or a request is
+# in the network menu and the headers panel specifying the transfer or a request is
 # cached.
 networkMenu.sizeCached=Aus Cache
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
-# in the network menu specifying the transferred of a request computed
-# by a service worker.
+# in the network menu and the headers panel specifying the transferred of a request
+# computed by a service worker.
 networkMenu.sizeServiceWorker=Service-Worker
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
@@ -282,6 +282,10 @@ networkMenu.blockedBy=blockiert durch %S
 # LOCALIZATION NOTE (networkMenu.blocked2): This is a generic message for a
 # URL that has been blocked for an unknown reason
 networkMenu.blocked2=Blockiert
+
+# LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
+# URL that has been blocked by an extension
+# %S is the extension name.
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
@@ -688,8 +692,8 @@ netmonitor.toolbar.duration=Dauer
 netmonitor.toolbar.latency=Latenz
 
 # LOCALIZATION NOTE (netmonitor.toolbar.transferred): This is the label displayed
-# in the network table toolbar, above the "transferred" column, which is the
-# compressed / encoded size.
+# in the network table toolbar, above the "transferred" column and in general 
+# section of the headers panel, which is the compressed / encoded size.
 netmonitor.toolbar.transferred=Übertragen
 
 # LOCALIZATION NOTE (netmonitor.toolbar.contentSize): This is the label displayed
@@ -866,6 +870,13 @@ netmonitor.actionbar.removeBlockedUrl=Regel entfernen
 # LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=Regel hinzufügen
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
+# usage notice displayed when network blocking list is empty
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
+# add notice that explains ways to add blocking pattern that is displayed when
+# network blocking list is empty
 
 # LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
 # context menu item for removing all blocked URLs
@@ -1062,10 +1073,6 @@ netmonitor.toolbar.timings=Zeiten
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Antwortkopfzeilen
 
-# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
-# label displayed in the network details headers tab identifying the
-# block url toolbar button.
-
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=Angefragte Adresse:
@@ -1086,6 +1093,31 @@ netmonitor.summary.status=Status-Code:
 # in the network details headers tab identifying the http version.
 netmonitor.summary.version=Version:
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Blockieren
+
+# LOCALIZATION NOTE (netmonitor.headers.address): This is the label displayed
+# in the network details headers tab identifying the remote address.
+netmonitor.headers.address=Adresse
+
+# LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
+# in the network details headers tab identifying the status code.
+netmonitor.headers.status=Status
+
+# LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
+# in the network details headers tab identifying the size.
+netmonitor.headers.size=Größe
+
+# LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
+# in the network details headers tab providing the size details.
+# %1$S is the transferred size, %2$S is the size.
+
+# LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
+# in the network details headers tab identifying the http version.
+netmonitor.headers.version=Version
+
 # LOCALIZATION NOTE (netmonitor.summary.learnMore): This is the label displayed
 # in the network details headers tab, with a link to external documentation.
 netmonitor.summary.learnMore=Weitere Informationen zum Status-Code
@@ -1093,6 +1125,12 @@ netmonitor.summary.learnMore=Weitere Informationen zum Status-Code
 # LOCALIZATION NOTE (netmonitor.summary.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Referrer Policy:
+
+# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# in the network details headers tab identifying the referrer policy.
+
+# LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
+# in the network details headers tab identifying the content blocking mode.
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
@@ -1238,6 +1276,9 @@ netmonitor.security.certificate=Zertifikat:
 # LOCALIZATION NOTE (netmonitor.trackingResource.tooltip): This is the label used
 # in the Network monitor panel as a tooltip for tracking resource icon.
 netmonitor.trackingResource.tooltip=Die Adresse stimmt mit einem bekannten Element zur Aktivitätenverfolgung überein und würde bei aktiver Blockierung von Seitenelementen zur Aktivitätenverfolgung blockiert.
+
+# LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
+# the label used in the Network monitor panel for showing enhanced tracking protection.
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
