--- a/nl/devtools/client/debugger.properties
+++ b/nl/devtools/client/debugger.properties
@@ -686,6 +686,13 @@ inlinePreview.show.label=Inlinevoorbeeld tonen
 # for hiding the inline preview block
 inlinePreview.hide.label=Inlinevoorbeeld verbergen
 
+# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.disable.label=Inlinevoorbeeld uitschakelen
+
+# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
+# tooltip that will describe disabling inline preview
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Debugger-instellingen
 
@@ -696,6 +703,12 @@ settings.disableJavaScript.label=JavaScript uitschakelen
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Schakelt JavaScript uit (vernieuwen vereist)
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
+# tooltip for disabling source maps
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
+# label for disabling source maps
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
