--- a/zh-TW/devtools/client/debugger.properties
+++ b/zh-TW/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=顯示行內預覽
 # for hiding the inline preview block
 inlinePreview.hide.label=隱藏行內預覽
 
+# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.disable.label=關閉行內預覽功能
+
+# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
+# tooltip that will describe disabling inline preview
+inlinePreview.disable.tooltip=關閉除錯器編輯器當中的行內預覽
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=除錯器設定
 
@@ -696,6 +704,14 @@ settings.disableJavaScript.label=關閉 JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=停用 JavaScript（需要重新整理頁面）
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
+# tooltip for disabling source maps
+settings.disableSourceMaps.tooltip=停用客戶端 source maps
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
+# label for disabling source maps
+settings.disableSourceMaps.label=停用 source maps
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
