--- a/sv-SE/devtools/client/debugger.properties
+++ b/sv-SE/devtools/client/debugger.properties
@@ -686,6 +686,13 @@ inlinePreview.show.label=Visa inline-förhandsvisning
 # for hiding the inline preview block
 inlinePreview.hide.label=Dölj inline-förhandsvisning
 
+# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.disable.label=Inaktivera inline förhandsvisning
+
+# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
+# tooltip that will describe disabling inline preview
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Felsökningsinställningar
 
@@ -696,6 +703,14 @@ settings.disableJavaScript.label=Inaktivera JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Inaktiverar JavaScript (Kräver uppdatering)
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
+# tooltip for disabling source maps
+settings.disableSourceMaps.tooltip=Inaktivera klient källmappning
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
+# label for disabling source maps
+settings.disableSourceMaps.label=Inaktivera källmappning
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
