Pontoon: Update Welsh (cy) localization of Firefox Co-authored-by: Rhoslyn Prys <rprys@posteo.net>

--- a/cy/netwerk/necko.properties
+++ b/cy/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Mynediad storio wedi ei roi yn awtoma
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Mynediad storio wedi ei roi i yn awtomatig i draciwr “%2$S” ar “%1$S”.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Mynediad storio a roddwyd ar gyfer ffynhonnell “%2$S”  ar “%1$S”.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Mynediad storio a roddir yn awtomatig ar gyfer ffynhonnell “%2$S” ar “%1$S”.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Mae mynediad storio yn cael ei roi'n awtomatig ar gyfer ynysu Parti Cyntaf “%2$S” ar “%1$S”.
 
