--- a/cy/devtools/client/debugger.properties
+++ b/cy/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Dangos rhagolwg mewnlin
 # for hiding the inline preview block
 inlinePreview.hide.label=Cuddio rhagolwg mewnlin
 
+# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.disable.label=Analluogi rhagolwg mewnlin
+
+# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
+# tooltip that will describe disabling inline preview
+inlinePreview.disable.tooltip=Yn analluogi rhagolwg mewnol yn y golygydd dadfygio
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Dewisiadau Dadfygio
 
@@ -696,6 +704,14 @@ settings.disableJavaScript.label=Analluogi JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Yn analluogi JavaScript (Angen ail gychwyn)
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
+# tooltip for disabling source maps
+settings.disableSourceMaps.tooltip=Yn analluogi mapiau ffynhonnell cleientiaid
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
+# label for disabling source maps
+settings.disableSourceMaps.label=Analluogu mapiau ffynhonnell
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
