--- a/cy/devtools/client/netmonitor.properties
+++ b/cy/devtools/client/netmonitor.properties
@@ -265,13 +265,13 @@ networkMenu.sizeUnavailable=—
 networkMenu.sizeUnavailable.title=Nid yw'r maint trosglwyddwyd ar gael
 
 # LOCALIZATION NOTE (networkMenu.sizeCached): This is the label displayed
-# in the network menu specifying the transfer or a request is
+# in the network menu and the headers panel specifying the transfer or a request is
 # cached.
 networkMenu.sizeCached=storiwyd dros dro
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
-# in the network menu specifying the transferred of a request computed
-# by a service worker.
+# in the network menu and the headers panel specifying the transferred of a request
+# computed by a service worker.
 networkMenu.sizeServiceWorker=service worker
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
@@ -282,6 +282,11 @@ networkMenu.blockedBy=rhwystrwyd gan %S
 # LOCALIZATION NOTE (networkMenu.blocked2): This is a generic message for a
 # URL that has been blocked for an unknown reason
 networkMenu.blocked2=Rhwystrwyd
+
+# LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
+# URL that has been blocked by an extension
+# %S is the extension name.
+networkMenu.blockedby=Rhwystrwyd gan %S
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
@@ -688,8 +693,8 @@ netmonitor.toolbar.duration=Hyd
 netmonitor.toolbar.latency=Cuddni
 
 # LOCALIZATION NOTE (netmonitor.toolbar.transferred): This is the label displayed
-# in the network table toolbar, above the "transferred" column, which is the
-# compressed / encoded size.
+# in the network table toolbar, above the "transferred" column and in general 
+# section of the headers panel, which is the compressed / encoded size.
 netmonitor.toolbar.transferred=Trosglwyddwyd
 
 # LOCALIZATION NOTE (netmonitor.toolbar.contentSize): This is the label displayed
@@ -866,6 +871,15 @@ netmonitor.actionbar.removeBlockedUrl=Tynnu patrwm
 # LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=Ychwanegu patrwm
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
+# usage notice displayed when network blocking list is empty
+netmonitor.actionbar.requestBlockingUsageNotice=Ychwanegwch batrymau URL yma i rwystro ceisiadau cydweddu.
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
+# add notice that explains ways to add blocking pattern that is displayed when
+# network blocking list is empty
+netmonitor.actionbar.requestBlockingAddNotice=Cychwynnwch drwy ychwanegu patrwm neu lusgo rhes o'r tabl rhwydwaith.
 
 # LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
 # context menu item for removing all blocked URLs
@@ -1087,6 +1101,27 @@ netmonitor.summary.version=Fersiwn:
 # block url toolbar button.
 netmonitor.headers.toolbar.block=Rhwystro
 
+# LOCALIZATION NOTE (netmonitor.headers.address): This is the label displayed
+# in the network details headers tab identifying the remote address.
+netmonitor.headers.address=Cyfeiriad
+
+# LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
+# in the network details headers tab identifying the status code.
+netmonitor.headers.status=Statws
+
+# LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
+# in the network details headers tab identifying the size.
+netmonitor.headers.size=Maint
+
+# LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
+# in the network details headers tab providing the size details.
+# %1$S is the transferred size, %2$S is the size.
+netmonitor.headers.sizeDetails=%1$S (maint %2$S)
+
+# LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
+# in the network details headers tab identifying the http version.
+netmonitor.headers.version=Fersiwn
+
 # LOCALIZATION NOTE (netmonitor.summary.learnMore): This is the label displayed
 # in the network details headers tab, with a link to external documentation.
 netmonitor.summary.learnMore=Dysgu rhagor am god statws
@@ -1094,6 +1129,14 @@ netmonitor.summary.learnMore=Dysgu rhagor am god statws
 # LOCALIZATION NOTE (netmonitor.summary.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Polisi Cyfeiriwr:
+
+# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# in the network details headers tab identifying the referrer policy.
+netmonitor.headers.referrer=Cyfeiriwr
+
+# LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
+# in the network details headers tab identifying the content blocking mode.
+netmonitor.headers.contentBlocking=Yn Rhwystro
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
@@ -1240,6 +1283,10 @@ netmonitor.security.certificate=Tystysgrif:
 # LOCALIZATION NOTE (netmonitor.trackingResource.tooltip): This is the label used
 # in the Network monitor panel as a tooltip for tracking resource icon.
 netmonitor.trackingResource.tooltip=Mae'r URL hwn yn cyfateb i draciwr hysbys a fyddai'n cael ei rwystro gyda Rhwystro Cynnwys ymlaen.
+
+# LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
+# the label used in the Network monitor panel for showing enhanced tracking protection.
+netmonitor.trackingResource.enhancedTrackingProtection=Diogelwch Uwch Rhag Tracio
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
