Pontoon: Update German (de) localization of Firefox Co-authored-by: Philipp Fischbeck <pfischbeck@googlemail.com>

--- a/de/devtools/client/netmonitor.properties
+++ b/de/devtools/client/netmonitor.properties
@@ -286,6 +286,7 @@ networkMenu.blocked2=Blockiert
 # LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
 # URL that has been blocked by an extension
 # %S is the extension name.
+networkMenu.blockedby=Blockiert durch %S
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
