--- a/ko/devtools/client/netmonitor.properties
+++ b/ko/devtools/client/netmonitor.properties
@@ -265,13 +265,13 @@ networkMenu.sizeUnavailable=—
 networkMenu.sizeUnavailable.title=전송된 크기를 확인할 수 없음
 
 # LOCALIZATION NOTE (networkMenu.sizeCached): This is the label displayed
-# in the network menu specifying the transfer or a request is
+# in the network menu and the headers panel specifying the transfer or a request is
 # cached.
 networkMenu.sizeCached=캐시됨
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
-# in the network menu specifying the transferred of a request computed
-# by a service worker.
+# in the network menu and the headers panel specifying the transferred of a request
+# computed by a service worker.
 networkMenu.sizeServiceWorker=Service Worker
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
@@ -282,6 +282,11 @@ networkMenu.blockedBy=%S에 의해 차단됨
 # LOCALIZATION NOTE (networkMenu.blocked2): This is a generic message for a
 # URL that has been blocked for an unknown reason
 networkMenu.blocked2=차단됨
+
+# LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
+# URL that has been blocked by an extension
+# %S is the extension name.
+networkMenu.blockedby=%S에 의해 차단됨
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
@@ -688,8 +693,8 @@ netmonitor.toolbar.duration=시간
 netmonitor.toolbar.latency=지연 시간
 
 # LOCALIZATION NOTE (netmonitor.toolbar.transferred): This is the label displayed
-# in the network table toolbar, above the "transferred" column, which is the
-# compressed / encoded size.
+# in the network table toolbar, above the "transferred" column and in general 
+# section of the headers panel, which is the compressed / encoded size.
 netmonitor.toolbar.transferred=전송됨
 
 # LOCALIZATION NOTE (netmonitor.toolbar.contentSize): This is the label displayed
@@ -866,6 +871,14 @@ netmonitor.actionbar.removeBlockedUrl=패턴 삭제
 # LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=패턴 추가
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
+# usage notice displayed when network blocking list is empty
+netmonitor.actionbar.requestBlockingUsageNotice=일치하는 요청을 차단하려면 여기에 URL 패턴을 추가하세요.
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
+# add notice that explains ways to add blocking pattern that is displayed when
+# network blocking list is empty
 
 # LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
 # context menu item for removing all blocked URLs
@@ -1087,6 +1100,22 @@ netmonitor.summary.version=버전:
 # block url toolbar button.
 netmonitor.headers.toolbar.block=차단
 
+# LOCALIZATION NOTE (netmonitor.headers.address): This is the label displayed
+# in the network details headers tab identifying the remote address.
+
+# LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
+# in the network details headers tab identifying the status code.
+
+# LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
+# in the network details headers tab identifying the size.
+
+# LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
+# in the network details headers tab providing the size details.
+# %1$S is the transferred size, %2$S is the size.
+
+# LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
+# in the network details headers tab identifying the http version.
+
 # LOCALIZATION NOTE (netmonitor.summary.learnMore): This is the label displayed
 # in the network details headers tab, with a link to external documentation.
 netmonitor.summary.learnMore=상태 코드에 대해 알아보기
@@ -1094,6 +1123,12 @@ netmonitor.summary.learnMore=상태 코드에 대해 알아보기
 # LOCALIZATION NOTE (netmonitor.summary.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=리퍼러 정책:
+
+# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# in the network details headers tab identifying the referrer policy.
+
+# LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
+# in the network details headers tab identifying the content blocking mode.
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
@@ -1240,6 +1275,9 @@ netmonitor.security.certificate=인증서:
 # LOCALIZATION NOTE (netmonitor.trackingResource.tooltip): This is the label used
 # in the Network monitor panel as a tooltip for tracking resource icon.
 netmonitor.trackingResource.tooltip=이 URL은 알려진 추적기와 일치하고 콘텐츠 차단 기능이 켜지면 차단될 것입니다.
+
+# LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
+# the label used in the Network monitor panel for showing enhanced tracking protection.
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
