Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/devtools/client/debugger.properties
+++ b/ko/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=인라인 미리보기 표시
 # for hiding the inline preview block
 inlinePreview.hide.label=인라인 미리보기 숨기기
 
+# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.disable.label=인라인 미리보기 사용 안 함
+
+# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
+# tooltip that will describe disabling inline preview
+inlinePreview.disable.tooltip=디버거 편집기에서 인라인 미리보기를 비활성화합니다
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=디버거 설정
 
@@ -696,6 +704,14 @@ settings.disableJavaScript.label=JavaScript 끄기
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=JavaScript 끄기 (새로 고침 필요)
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
+# tooltip for disabling source maps
+settings.disableSourceMaps.tooltip=클라이언트 소스 맵을 비활성화합니다
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
+# label for disabling source maps
+settings.disableSourceMaps.label=소스 맵 사용 안 함
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
