Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/devtools/client/storage.properties
+++ b/ko/devtools/client/storage.properties
@@ -21,14 +21,14 @@ tree.emptyText=이 페이지에는 호스트가 없음
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
-table.emptyText=선택한 호스트에 데이터가 없음
+table.emptyText=선택한 호스트에 데이터 없음
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=쿠키
-tree.labels.localStorage=로컬 스토리지
-tree.labels.sessionStorage=세션 스토리지
+tree.labels.localStorage=로컬 저장소
+tree.labels.sessionStorage=세션 저장소
 tree.labels.indexedDB=Indexed DB
 tree.labels.Cache=캐시 저장소
 
@@ -36,7 +36,6 @@ tree.labels.Cache=캐시 저장소
 # These strings are the header names of the columns in the Storage Table for
 # each type of storage available through the Storage Tree to the side.
 table.headers.cookies.uniqueKey=고유 키
-
 tree.labels.extensionStorage=확장 저장소
 
 # LOCALIZATION NOTE (table.headers.*.*):
@@ -58,7 +57,6 @@ table.headers.sessionStorage.name=키
 table.headers.sessionStorage.value=값
 
 table.headers.Cache.url=URL
-
 table.headers.cookies.expires2=Expires / Max-Age
 table.headers.cookies.size=크기
 table.headers.cookies.lastAccessed2=마지막 액세스
