--- a/ko/devtools/client/startup.properties
+++ b/ko/devtools/client/startup.properties
@@ -163,7 +163,7 @@ storage.panelLabel=저장소 패널
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
 # A keyboard shortcut for Storage Inspector will be shown inside the brackets.
-storage.tooltip3=저장소 검사기 (쿠키, 로컬 스토리지, …) (%S)
+storage.tooltip3=저장소 검사기 (쿠키, 로컬 저장소, …) (%S)
 
 # LOCALIZATION NOTE (scratchpad.label): this string is displayed in the title of
 # the tab when the Scratchpad is displayed inside the developer tools window and
