Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/devtools/client/netmonitor.properties
+++ b/he/devtools/client/netmonitor.properties
@@ -1088,12 +1088,15 @@ netmonitor.headers.toolbar.block=חסימה
 
 # LOCALIZATION NOTE (netmonitor.headers.address): This is the label displayed
 # in the network details headers tab identifying the remote address.
+netmonitor.headers.address=כתובת
 
 # LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
 # in the network details headers tab identifying the status code.
+netmonitor.headers.status=מצב
 
 # LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
 # in the network details headers tab identifying the size.
+netmonitor.headers.size=גודל
 
 # LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
 # in the network details headers tab providing the size details.
@@ -1101,6 +1104,7 @@ netmonitor.headers.toolbar.block=חסימה
 
 # LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
 # in the network details headers tab identifying the http version.
+netmonitor.headers.version=גרסה
 
 # LOCALIZATION NOTE (netmonitor.summary.learnMore): This is the label displayed
 # in the network details headers tab, with a link to external documentation.
