Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/devtools/client/netmonitor.properties
+++ b/he/devtools/client/netmonitor.properties
@@ -1101,6 +1101,7 @@ netmonitor.headers.size=גודל
 # LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
 # in the network details headers tab providing the size details.
 # %1$S is the transferred size, %2$S is the size.
+netmonitor.headers.sizeDetails=%1$S (גודל %2$S)
 
 # LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
 # in the network details headers tab identifying the http version.
@@ -1268,6 +1269,7 @@ netmonitor.trackingResource.tooltip=כתובת זו תואמת לרכיב מעק
 
 # LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
 # the label used in the Network monitor panel for showing enhanced tracking protection.
+netmonitor.trackingResource.enhancedTrackingProtection=הגנת מעקב מתקדמת
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
