--- a/ko/netwerk/necko.properties
+++ b/ko/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=“%1$S”의 추적기 “%2$S”에
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=“%1$S”의 추적기 “%2$S”의 저장소 접근이 자동으로 승인되었습니다.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=“%1$S”의 원본 “%2$S”의 저장소 접근이 승인되었습니다.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=“%1$S”의 원본 “%2$S”의 저장소 접근이 자동으로 승인되었습니다.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=“%1$S”의 자사 격리 “%2$S”의 저장소 접근이 자동으로 승인되었습니다.
 
