Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/devtools/client/toolbox.properties
+++ b/he/devtools/client/toolbox.properties
@@ -274,6 +274,10 @@ toolbox.debugTargetInfo.type.tab=לשונית
 toolbox.debugTargetInfo.connection.usb=USB
 toolbox.debugTargetInfo.connection.network=רשת
 
+# LOCALIZATION NOTE (toolbox.debugTargetInfo.reload):
+# Used as the reload button tooltip
+toolbox.debugTargetInfo.reload=טעינה מחדש
+
 # LOCALIZATION NOTE (toolbox.debugTargetInfo.targetType.*): This is displayed as the
 # alt attribute for an icon in the toolbox header in about:devtools-toolbox,
 # to indicate what is the type of the debug target being inspected.
@@ -290,9 +294,6 @@ browserToolbox.statusMessage=מצב חיבור לארגז הכלים של הדפ
 # LOCALIZATION NOTE (toolbox.replay.jumpMessage): This is the label
 # shown in the web replay timeline marker
 toolbox.replay.jumpMessage=מעבר להודעה %1$S
-
-# LOCALIZATION NOTE (toolbox.replay.rewind): This is the text that appears in the
-# Replay command bar to prompt the user to rewind the program.
 
 # LOCALIZATION NOTE (toolbox.debugTargetErrorPage.title): This is the title
 # for the Error view shown by the toolbox when a connection to a debug target
