--- a/oc/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/oc/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -17,3 +17,4 @@ unknownCancel.label=Anullar
 fileType=Fichièr %S
 # LOCALIZATION NOTE (orderedFileSizeWithType): first %S is type, second %S is size, and third %S is unit  
 orderedFileSizeWithType=%1$S (%2$S %3$S)
+pdfHandlerDescription=Format de document portable (PDF)
