Pontoon: Update German (de) localization of Firefox Co-authored-by: paul.trevor <paul.trevor@gmx.de>

--- a/de/browser/extensions/formautofill/formautofill.properties
+++ b/de/browser/extensions/formautofill/formautofill.properties
@@ -16,7 +16,7 @@ autofillSecurityOptionsLinkOSX = Automatisches Ausfüllen von Formularen & Siche
 # LOCALIZATION NOTE (changeAutofillOptions, changeAutofillOptionsOSX): These strings are used on the doorhanger
 # that notifies users that addresses are saved. The button leads users to Form Autofill browser preferences.
 changeAutofillOptions = Ändern der Einstellungen zum automatischen Ausfüllen von Formularen
-changeAutofillOptionsOSX = Einstellungen ändern zum automatisch Ausfüllen von Formularen
+changeAutofillOptionsOSX = Einstellungen ändern zum automatischen Ausfüllen von Formularen
 changeAutofillOptionsAccessKey = E
 # LOCALIZATION NOTE (addressesSyncCheckbox): If Sync is enabled, this checkbox is displayed on the doorhanger
 # shown when saving addresses.
@@ -184,7 +184,6 @@ cardExpiresMonth = Monat des Ablaufs
 cardExpiresYear = Jahr des Ablaufs
 billingAddress = Rechnungsadresse
 cardNetwork = Kreditkarten-Typ
-
 # LOCALIZATION NOTE (cardCVV): Credit card security code https://en.wikipedia.org/wiki/Card_security_code
 cardCVV = CVV
 
