[S] dom: Bug 1605176 - Send a error message data and cause a message error on the receiver side when the message data contains a shared memory object in BrowsingContext::PostMessageMoz

--- a/it/dom/chrome/dom/dom.properties
+++ b/it/dom/chrome/dom/dom.properties
@@ -256,3 +256,4 @@ MathML_DeprecatedXLinkAttributeWarning = Gli attributi XLink “href”, “type
 WebShareAPI_Failed = La procedura di condivisione non è riuscita.
 WebShareAPI_Aborted = La procedura di condivisione è stata annullata.
 UnknownProtocolNavigationPrevented = Impedita la navigazione verso “%1$S” in quanto il protocollo è sconosciuto.
+PostMessageSharedMemoryObjectToCrossOriginWarning = Impossibile inviare un messaggio contenente un oggetto della memoria condivisa a una finestra cross-origin.
