[S] devtools: Bug 1639088 - Capitalize debugger settings menu items

--- a/it/devtools/client/debugger.properties
+++ b/it/devtools/client/debugger.properties
@@ -234,13 +234,13 @@ downloadFile.label = Scarica file
 downloadFile.accesskey = S
 inlinePreview.show.label = Visualizza anteprima in linea
 inlinePreview.hide.label = Nascondi anteprima in linea
-inlinePreview.disable.label = Disattiva anteprima in linea
-inlinePreview.disable.tooltip = Disattiva anteprima in linea nell’editor di Debugger
+inlinePreview.toggle.label = Anteprima variabili in linea
+inlinePreview.toggle.tooltip = Visualizza anteprima in linea nell’editor di Debugger
 settings.button.label = Impostazioni Debugger
 settings.disableJavaScript.label = Disattiva JavaScript
 settings.disableJavaScript.tooltip = Disattiva JavaScript (aggiornamento necessario)
-settings.disableSourceMaps.tooltip = Disttiva mapping di origine client
-settings.disableSourceMaps.label = Disttiva mapping di origine
+settings.toggleSourceMaps.label = Mapping di origine
+settings.toggleSourceMaps.tooltip = Attiva il mapping di origine per consentire agli strumenti di sviluppo di caricare le sorgenti originali insieme a quelle generate
 preview.noProperties = Nessuna proprietà
 framework.disableGrouping = Disattiva raggruppamento framework
 framework.disableGrouping.accesskey = u
