Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/dom/chrome/dom/dom.properties
+++ b/zh-TW/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=分享操作失敗。
 WebShareAPI_Aborted=分享操作中斷。
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=由於是未知的通訊協定，並未開啟「%1$S」。
+PostMessageSharedMemoryObjectToCrossOriginWarning=無法將包含共享記憶體物件的訊息用 POST 方式傳送到跨來源視窗。
