Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/devtools/client/debugger.properties
+++ b/ko/devtools/client/debugger.properties
@@ -686,13 +686,13 @@ inlinePreview.show.label=인라인 미리보기 표시
 # for hiding the inline preview block
 inlinePreview.hide.label=인라인 미리보기 숨기기
 
-# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
 # that will toggle display of inline preview
-inlinePreview.disable.label=인라인 미리보기 사용 안 함
+inlinePreview.toggle.label=인라인 변수 미리보기
 
-# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
-# tooltip that will describe disabling inline preview
-inlinePreview.disable.tooltip=디버거 편집기에서 인라인 미리보기를 비활성화합니다
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=디버거 편집기에서 인라인 미리보기를 표시합니다
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=디버거 설정
@@ -705,13 +705,12 @@ settings.disableJavaScript.label=JavaScript 끄기
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=JavaScript 끄기 (새로 고침 필요)
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
-# tooltip for disabling source maps
-settings.disableSourceMaps.tooltip=클라이언트 소스 맵을 비활성화합니다
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
-# label for disabling source maps
-settings.disableSourceMaps.label=소스 맵 사용 안 함
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=소스 맵
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
