Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/devtools/client/debugger.properties
+++ b/ko/devtools/client/debugger.properties
@@ -707,6 +707,7 @@ settings.disableJavaScript.tooltip=JavaScript 끄기 (새로 고침 필요)
 
 # LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
 # tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=DevTools에서 생성된 소스 외에 원본 소스를 로드할 수 있도록 소스 맵을 사용하도록 합니다
 
 # LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
 # label for toggling the source maps feature
