Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/dom/chrome/dom/dom.properties
+++ b/uk/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=Збій операції обміну.
 WebShareAPI_Aborted=Операцію з обміну перервано.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Перехід до “%1$S” зупинено, оскільки протокол невідомий.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Неможливо надіслати повідомлення, що містить об'єкт спільної пам'яті, у перехресно-доменне вікно.
