Pontoon: Update Welsh (cy) localization of Firefox Co-authored-by: Rhoslyn Prys <rprys@posteo.net>

--- a/cy/devtools/client/debugger.properties
+++ b/cy/devtools/client/debugger.properties
@@ -686,13 +686,13 @@ inlinePreview.show.label=Dangos rhagolwg mewnlin
 # for hiding the inline preview block
 inlinePreview.hide.label=Cuddio rhagolwg mewnlin
 
-# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
 # that will toggle display of inline preview
-inlinePreview.disable.label=Analluogi rhagolwg mewnlin
+inlinePreview.toggle.label=Rhagolwg Newidyn Mewnol
 
-# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
-# tooltip that will describe disabling inline preview
-inlinePreview.disable.tooltip=Yn analluogi rhagolwg mewnol yn y golygydd dadfygio
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Dangos rhagolwg mewnlin yn y golygydd dadfygio
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Dewisiadau Dadfygio
@@ -705,13 +705,13 @@ settings.disableJavaScript.label=Analluogi JavaScript
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Yn analluogi JavaScript (Angen ail gychwyn)
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
-# tooltip for disabling source maps
-settings.disableSourceMaps.tooltip=Yn analluogi mapiau ffynhonnell cleientiaid
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=Galluogi Mapiau Ffynhonnell i adael i DevTools lwytho'ch ffynonellau gwreiddiol yn ogystal â'r rhai a gynhyrchwyd gennych
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
-# label for disabling source maps
-settings.disableSourceMaps.label=Analluogu mapiau ffynhonnell
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Mapiau Ffynhonnell
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
