--- a/cy/dom/chrome/dom/dom.properties
+++ b/cy/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=Methodd y weithred rhannu.
 WebShareAPI_Aborted=Ataliwyd y weithred rhannu.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Wedi atal llywio i “%1$S” oherwydd protocol anhysbys.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Methu postio neges sy'n cynnwys gwrthrych cof a rennir i ffenestr traws-darddiad.
