Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/devtools/client/netmonitor.properties
+++ b/uk/devtools/client/netmonitor.properties
@@ -286,6 +286,7 @@ networkMenu.blocked2=Заблоковано
 # LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
 # URL that has been blocked by an extension
 # %S is the extension name.
+networkMenu.blockedby=Заблоковано %S
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
@@ -873,10 +874,12 @@ netmonitor.actionbar.addBlockedUrl=Додати шаблон
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
+netmonitor.actionbar.requestBlockingUsageNotice=Додайте URL-шаблони для блокування відповідних запитів.
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
 # add notice that explains ways to add blocking pattern that is displayed when
 # network blocking list is empty
+netmonitor.actionbar.requestBlockingAddNotice=Почніть вводити шаблон, або перетягніть цілий рядок з мережевої таблиці.
 
 # LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
 # context menu item for removing all blocked URLs
@@ -1100,12 +1103,15 @@ netmonitor.headers.toolbar.block=Блокувати
 
 # LOCALIZATION NOTE (netmonitor.headers.address): This is the label displayed
 # in the network details headers tab identifying the remote address.
+netmonitor.headers.address=Адреса
 
 # LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
 # in the network details headers tab identifying the status code.
+netmonitor.headers.status=Стан
 
 # LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
 # in the network details headers tab identifying the size.
+netmonitor.headers.size=Розмір
 
 # LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
 # in the network details headers tab providing the size details.
