Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/browser/chrome/browser/places/places.properties
+++ b/uk/browser/chrome/browser/places/places.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 load-js-data-url-error=З міркувань безпеки, javascript або data urls не можуть бути завантажені з вікна історії чи бічної панелі.
-noTitle=(немає заголовка)
+noTitle=(без назви)
 
 bookmarksMenuEmptyFolder=(Порожньо)
 
