--- a/uk/devtools/client/debugger.properties
+++ b/uk/devtools/client/debugger.properties
@@ -1181,12 +1181,12 @@ ctrl=Ctrl
 # LOCALIZATION NOTE (anonymousFunction): this string is used to display
 # JavaScript functions that have no given name - they are said to be
 # anonymous.
-anonymousFunction=<anonymous>
+anonymousFunction=<анонімно>
 
 # LOCALIZATION NOTE (stacktrace.asyncStack): this string is used to
 # indicate that a given stack frame has an async parent.
 # %S is the "Async Cause" of the frame.
-stacktrace.asyncStack=(Async: %S)
+stacktrace.asyncStack=(Асинхронний: %S)
 
 # LOCALIZATION NOTE (shortcuts.toggleBreakpoint): text describing
 # keyboard shortcut action for toggling breakpoint
