Pontoon: Update Norwegian Bokmål (nb-NO) localization of Firefox Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/netwerk/necko.properties
+++ b/nb-NO/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Lagringstilgang ble automatisk tildel
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Lagringstilgang ble automatisk tildelt for sporer «%2$S» på «%1$S».
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Lagringstilgang tildelt for opprinnelse «%2$S» på «%1$S».
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Lagringstilgang ble automatisk tildelt for opprinnelse «%2$S» på «%1$S».
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Lagringstilgang ble automatisk tildelt for førstepartsisolasjon «%2$S» på «%1$S».
 
