--- a/nb-NO/dom/chrome/dom/dom.properties
+++ b/nb-NO/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=Delingsoperasjonen har mislyktes.
 WebShareAPI_Aborted=Delingsoperasjonen ble avbrutt.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Forhindret navigering til «%1$S» på grunn av en ukjent protokoll.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Kan ikke sende melding som inneholder et delt minneobjekt til et cross-origin-vindu.
