Pontoon: Update French (fr) localization of Firefox Co-authored-by: Théo Chevalier <theo.chevalier11@gmail.com> Co-authored-by: Benoit Leseul <benoit.leseul@gmail.com> Co-authored-by: Paul Playe <firefox@playe.io>

--- a/fr/dom/chrome/dom/dom.properties
+++ b/fr/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=L’opération de partage a échoué.
 WebShareAPI_Aborted=L’opération de partage a été interrompue.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Navigation vers « %1$S » empêchée en raison d’un protocole inconnu.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Impossible de publier un message contenant un objet de mémoire partagée dans une fenêtre cross-origin.
