--- a/fr/netwerk/necko.properties
+++ b/fr/netwerk/necko.properties
@@ -51,12 +51,16 @@ CookieBlockedForeign=La demande d’accès aux cookies ou au stockage sur « %1
 CookieAllowedForOriginOnTrackerByStorageAccessAPI=Accès au stockage accordé pour l’adresse « %3$S » ouverte par le traqueur « %2$S » pour l’adresse « %1$S ».
 
 # LOCALIZATION NOTE (CookieAllowedForTrackerByStorageAccessAPI): %2$S and %1$S are URLs.
-CookieAllowedForTrackerByStorageAccessAPI=Accès au stockage accordé pour le traqueur « %2$S » sur le site « %1$S ».
+CookieAllowedForTrackerByStorageAccessAPI=Accès au stockage accordé pour le traqueur « %2$S » sur le site « %1$S ».
 # LOCALIZATION NOTE (CookieAllowedForOriginOnTrackerByHeuristic): %3$S, %2$S and %1$S are URLs.
-CookieAllowedForOriginOnTrackerByHeuristic=Accès au stockage automatiquement accordé pour l’adresse « %3$S » ouverte par le traqueur « %2$S » sur le site « %1$S ».
+CookieAllowedForOriginOnTrackerByHeuristic=Accès au stockage automatiquement accordé pour l’adresse « %3$S » ouverte par le traqueur « %2$S » sur le site « %1$S ».
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Accès au stockage automatiquement accordé pour le traqueur « %2$S » sur le site « %1$S ».
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Accès au stockage accordé pour l’origine « %2$S » sur le site « %1$S ».
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Accès au stockage automatiquement accordé pour l’origine « %2$S » sur le site « %1$S ».
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Accès au stockage automatiquement accordé pour l’isolation First-Party « %2$S » sur le site « %1$S ».
 
