--- a/fr/devtools/client/debugger.properties
+++ b/fr/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Afficher l’aperçu en ligne
 # for hiding the inline preview block
 inlinePreview.hide.label=Masquer l’aperçu en ligne
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.toggle.label=Aperçu de variable en ligne
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Afficher l’aperçu en ligne dans l’éditeur de débogage
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Paramètres du débogueur
 
@@ -696,6 +704,13 @@ settings.disableJavaScript.label=Désactiver JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Désactive JavaScript (nécessite un redémarrage)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Cartes sources
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
