Pontoon: Update Spanish (Argentina) (es-AR) localization of Firefox Co-authored-by: Gabriela <gmontagu@gmail.com>

--- a/es-AR/dom/chrome/dom/dom.properties
+++ b/es-AR/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=Falló la operación de compartir.
 WebShareAPI_Aborted=Se abortó la operación de compartir.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Se evitó la navegación a “%1$S” debido a un protocolo desconocido.
+PostMessageSharedMemoryObjectToCrossOriginWarning=No se puede publicar un mensaje que contenga un objeto de memoria compartida en una ventana de origen cruzado.
